--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests
-        pip install email
+        pip install PyEmail
         pip install smtplib
         pip install MIMEText
     - name: Update zhihu
