--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -4,11 +4,8 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  schedule:
+    - cron: "0 8 5 5 *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
