--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: "0 8 5 5 *"
+    - cron: "3 17 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
